[package]
name = "filecoin-scheduler"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = true

[dependencies]
serde = { version = "*", features = ["derive"] }
once_cell = "*"
semaphore = "*"
log = "*"
env_logger = "*"
toml = "*"

# grpc
grpcio = { version = "*", default-features = false, features = ["protobuf-codec"] }
protobuf = "*"
futures = "*"

[build-dependencies]
protoc-grpcio = "*"