[package]
name = "filecoin-scheduler"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_scheduler"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-scheduler"
path = "src/main.rs"

#[[bin]]
#name = "grpc-test"
#path = "src/test.rs"

[dependencies]
serde = { version = "*", features = ["derive"] }
once_cell = "*"
semaphore = "*"
log = "*"
env_logger = "*"
serde_yaml = "*"
failure = "*"

# grpc
grpcio = { version = "^0.6", features = ["openssl"] }
protobuf = "^2"
futures = "*"

[build-dependencies]
protoc-grpcio = "*"
